Thu May 16 18:19:59 2002  George Lebl <jirka@5z.com>

	* info.c, log_repaint.c, logrtns.c, logview.h, misc.c, zoom.c:
	  Some i18n fixage, especially with getting utf8 vs locale
	  encoding straight.  It is quite ugly, though now we again read
	  localized logs and don't spew out tons of warnings.  I can't make
	  sure that the problem for Chinese is gone since I think I don't
	  have the right fonts for this.  So I'll mark #81252 as fixed.

Thu May 16 15:20:35 2002  George Lebl <jirka@5z.com>

	* logview.c: make the window and make sure it's shown before opening
	  files since then we look like we are loading faster, especially if
	  your logfile is very long.

Thu May 16 15:09:19 2002  George Lebl <jirka@5z.com>

	* log_repaint.c, zoom.c: partially fix #81252 by converting output
	  of strftime to utf8.  Also convert the string to utf8, this still
	  needs a bit of work, so I'm not closing the bug yet

	* logview.c: fix crash when closing window

2002-05-14  Glynn Foster  <glynn.foster@sun.com>

	* gnome-system-log-actions.db: Comment out example
	strings. I wish I am more time to look through this 
	properly.

2002-05-11 Samuel Stringham  <sams@e-sa.com> 

	* logrtns.c: On log rotation, or log creation, 
	or just empty logs logview fails.  Tough to tell if 
	a log is actually a system log when it is empty, but 
	should still try to read/monitor it. Fixes #81348.

2002-05-11  Samuel Stringham  <sams@e-sa.com>
	
	* actions.c: Fix crash in actions dialog. Fixes #81397.

2002-05-11  Samuel Stringham  <sams@e-sa.com>

	* logview.c: remove bogus spacing. Fixes #81399.

2002-05-10  Glynn Foster  <glynn.foster@sun.com>

	* calendar.c, logview.c, zoom.c: Fix crashes on dialog 
	boxes when 'Esc' is used.

2002-05-10  Glynn Foster  <glynn.foster@sun.com>

	* logrtns.c: Add sanity check. Fixes #81265.

2002-05-08  Glynn Foster  <glynn.foster@sun.com>

	* about.c, logview.c: Fix up some inconsistancies as pointed
	out by the doc team.
