@@ -129,3 +129,20 @@ ShowQueuedErrMessages (void)
 		g_string_free (gs, TRUE);
 	}
 }
+
+char *
+LocaleToUTF8 (const char *in)
+{
+	/* FIXME: we could guess the language from the line how we guessed
+	 * the month and can we get this to utf8 correctly even if it's not in
+	 * the current encoding */
+	char *out = g_locale_to_utf8 (in, -1, NULL, NULL, NULL);
+	if (out == NULL) {
+		if (g_utf8_validate (in, -1, NULL))
+			return g_strdup (in);
+		else
+			return g_strdup ("?");
+	} else {
+		return out;
+	}
+}
